pvtrace is now dctrace. 73% compression from original inception. 86% faster encoding. Both because of switch to binary.

--- a/dctrace/Makefile
+++ b/dctrace/Makefile
@@ -9,14 +9,14 @@ CC = gcc
 
 OBJS = trace.o symbols.o stack.o priorityqueue.o
 
-pvtrace: $(OBJS)
+dctrace: $(OBJS)
 	gcc -o $@ $(OBJS)
 
 .c.o:
 	$(CC) $(CFLAGS) -Wall -c $<
 
-install: pvtrace
-	cp pvtrace /usr/local/bin
+install: dctrace
+	cp dctrace /usr/local/bin
 
 clean:
-	rm -f pvtrace *.o
+	rm -f dctrace *.o
